Fixed broken login link

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -41,9 +41,9 @@
         {{end}}
       </p>
       {{if .IsLoggedIn}}
-      You are logged in. To change account click <a href="http://localhost/login">here</a>.
+      You are logged in. To change account click <a href="/login">here</a>.
       {{else}}
-      <a href="http://localhost/login">Login</a>
+      <a href="/login">Login</a>
       {{end}}
     </main>
   </body>
